# DTC.Api/Controllers/BraketController.cs
@@ -1,4 +1,4 @@
-﻿using DTC.Api.Dtos.Round;
+﻿using DTC.Api.Dtos.Braket;
 using DTC.Api.Interfaces;
 using DTC.Api.Mappers;
 using Microsoft.AspNetCore.Mvc;
@@ -7,49 +7,49 @@ namespace DTC.Api.Controllers
 {
     [Route("api/rounds")]
     [ApiController]
-    public class RoundController : ControllerBase
+    public class BraketController : ControllerBase
     {
-        private readonly IRoundRepository _roundRepo;
+        private readonly IBraketRepository _roundRepo;
         private readonly IMatchRepository _matchRepo;
 
-        public RoundController(IRoundRepository roundRepo, IMatchRepository matchRepository)
+        public BraketController(IBraketRepository roundRepo, IMatchRepository matchRepository)
         {
             _roundRepo = roundRepo;
             _matchRepo = matchRepository;
         }
 
         [HttpGet("tournament/{tournamentId:int}")]
-        public async Task<ActionResult<IEnumerable<RoundDto>>> GetByTournament([FromRoute] int tournamentId)
+        public async Task<ActionResult<IEnumerable<BraketDto>>> GetByTournament([FromRoute] int tournamentId)
         {
             var rounds = await _roundRepo.GetByTournamentIdAsync(tournamentId);
-            return Ok(rounds.Select(r => r.ToRoundDto()));
+            return Ok(rounds.Select(r => r.ToBraketDto()));
         }
 
         [HttpGet("{id:int}")]
-        public async Task<ActionResult<RoundDto>> GetById([FromRoute] int id)
+        public async Task<ActionResult<BraketDto>> GetById([FromRoute] int id)
         {
             var round = await _roundRepo.GetByIdAsync(id);
             if (round == null) return NotFound();
 
-            return Ok(round.ToRoundDto());
+            return Ok(round.ToBraketDto());
         }
 
         [HttpPost]
-        public async Task<ActionResult<RoundDto>> Create([FromBody] CreateRoundDto dto)
+        public async Task<ActionResult<BraketDto>> Create([FromBody] CreateBraketDto dto)
         {
             var entity = dto.ToEntityFromCreate();
             var created = await _roundRepo.CreateAsync(entity);
 
-            return CreatedAtAction(nameof(GetById), new { id = created.Id }, created.ToRoundDto());
+            return CreatedAtAction(nameof(GetById), new { id = created.Id }, created.ToBraketDto());
         }
 
         [HttpPut("{id:int}")]
-        public async Task<IActionResult> Update([FromRoute] int id, [FromBody] UpdateRoundDto dto)
+        public async Task<IActionResult> Update([FromRoute] int id, [FromBody] UpdateBraketDto dto)
         {
             var existing = await _roundRepo.GetByIdAsync(id);
             if (existing == null) return NotFound();
 
-            dto.UpdateRoundEntity(existing);
+            dto.UpdateBraketEntity(existing);
             await _roundRepo.UpdateAsync(existing);
 
             return NoContent();
@@ -65,11 +65,11 @@ namespace DTC.Api.Controllers
         }
 
         [HttpGet("{id:int}/matches")]
-        public async Task<IActionResult> GetMatchesByRoundId([FromRoute] int id)
+        public async Task<IActionResult> GetMatchesByBraketId([FromRoute] int id)
         {
             try
             {
-                var matches = await _matchRepo.GetByRoundIdAsync(id);
+                var matches = await _matchRepo.GetByBraketIdAsync(id);
                 return Ok(matches.Select(m => m.ToMatchDto()));
             }
             catch(Exception ex) 
